--- a/FDM.ipynb
+++ b/FDM.ipynb
@@ -18,6 +18,8 @@
    "source": [
     "# Model input\n",
     "\n",
+    "# Form: -(p(x)y'(x))' + q(x)y(x) = f(x)\n",
+    "\n",
     "def p(x): return x\n",
     "def q(x): return -x\n",
     "def f(x): return -math.cos(x)\n",
@@ -36,11 +38,14 @@
    "source": [
     "# Method input\n",
     "\n",
+    "# Number of steps\n",
     "n = 10\n",
+    "# Step size calculation\n",
     "h = (xn - x0) / (n + 1)\n",
     "\n",
-    "#h = math.pi / 128\n",
-    "#n = math.floor((xn - x0) / h - 1) # n+1 points"
+    "\n",
+    "# h = math.pi/8\n",
+    "# n = (xn - x0) / n - 1"
    ]
   },
   {
@@ -81,7 +86,7 @@
     "    F.append(h**2 * f(x(i)))\n",
     "F.append(h**2 * f(x(n)) + p(x(n+1/2)) * yn)\n",
     "\n",
-    "# Solve\n",
+    "# Solve (Thomas algorithm)\n",
     "C[0] /= B[0]\n",
     "F[0] /= B[0]\n",
     "for i in range(1, n-1):\n",
@@ -125,20 +130,6 @@
     "plt.ylabel('Estimated value')\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -157,9 +148,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.5"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
